change request method names

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,5 +3,5 @@ include_directories(${PROJECT_SOURCE_DIR}/src/)
 
 add_executable(hcs_test hcs_test.c)
 
-target_link_libraries(hcs_test raid)
-target_compile_options(hcs_test PRIVATE -Wall -pedantic -std=gnu99)
+target_link_libraries(hcs_test raid pthread)
+target_compile_options(hcs_test PRIVATE -g -Wall -pedantic -std=gnu99)
