fix some annoying warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
+cmake_minimum_required(VERSION 3.1)
+
 project(raid)
 
 option(RAID_BUILD_TESTS "Build Tests" OFF)
@@ -6,5 +8,5 @@ add_subdirectory(src)
 
 if (RAID_BUILD_TESTS)
   add_subdirectory(test)
-endif (RAID_BUILD_TEST)
+endif (RAID_BUILD_TESTS)
 
