WIP windows support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,4 +12,13 @@ if (RAID_DEBUG_MEM)
   add_compile_definitions(RAID_DEBUG_MEM)
 endif (RAID_DEBUG_MEM)
 
-target_compile_options(${TARGET_NAME} PRIVATE -g -Wall -Wextra -pedantic -std=gnu99 -fPIC)
+if (WIN32)
+  include_directories(${PROJECT_SOURCE_DIR}/include/pthreads4w/)
+  target_link_directories(${TARGET_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/libs/win32/)
+  target_link_libraries(${TARGET_NAME} PRIVATE pthreads4w)
+  target_compile_options(${TARGET_NAME} PRIVATE -g -Wall -pedantic /std:gnu99 -fPIC)
+endif (WIN32)
+
+if (UNIX)
+  target_compile_options(${TARGET_NAME} PRIVATE -g -Wall -Wextra -pedantic -std=gnu99 -fPIC)
+endif (UNIX)
